Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/04 08:25:14 AM UTC</h3>
-<h4>as of 2023/05/04 08:25:14 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/04 09:25:14 AM UTC</h3>
+<h4>as of 2023/05/04 09:25:14 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>587</td><td>853</td><td id="goalPercentage">40.76%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>590</td><td>850</td><td id="goalPercentage">40.97%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -402,9 +402,7 @@
 <tr><td>08:38</tr></td>
 <tr><td>08:39</tr></td>
 <tr><td>08:42</tr></td>
-<tr><td>08:43</tr></td>
 <tr><td>08:44</tr></td>
-<tr><td>08:45</tr></td>
 <tr><td>08:46</tr></td>
 <tr><td>08:47</tr></td>
 <tr><td>08:48</tr></td>
@@ -415,7 +413,6 @@
 <tr><td>08:54</tr></td>
 <tr><td>08:56</tr></td>
 <tr><td>08:57</tr></td>
-<tr><td>08:58</tr></td>
 <tr><td>09:00</tr></td>
 <tr><td>09:01</tr></td>
 <tr><td>09:02</tr></td>
@@ -1028,8 +1025,11 @@
 <tr><td>08:36 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18894">18894</a>      </td><td style="text-align: right;">   78.12</td></tr>
 <tr><td>08:40 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18897">18897</a>      </td><td style="text-align: right;">    4.19</td></tr>
 <tr><td>08:41 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18899">18899</a>      </td><td style="text-align: right;">   58.95</td></tr>
+<tr><td>08:43 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14904">14904</a>    </td><td style="text-align: right;">   20.68</td></tr>
+<tr><td>08:45 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31477">31477</a>         </td><td style="text-align: right;">    8.97</td></tr>
 <tr><td>08:50 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14876">14876</a>    </td><td style="text-align: right;">   55.08</td></tr>
 <tr><td>08:55 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14862">14862</a>    </td><td style="text-align: right;">   43.94</td></tr>
+<tr><td>08:58 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14906">14906</a>    </td><td style="text-align: right;">   19.46</td></tr>
 <tr><td>08:59 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14877">14877</a>    </td><td style="text-align: right;">   32.25</td></tr>
 <tr><td>09:04 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18900">18900</a>      </td><td style="text-align: right;">   57.1 </td></tr>
 <tr><td>09:07 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14878">14878</a>    </td><td style="text-align: right;">   40.32</td></tr>
@@ -1485,11 +1485,11 @@
 <tr><td>Dino_Roar       </td><td style="text-align: right;">     62</td></tr>
 <tr><td>wrestlefanatic77</td><td style="text-align: right;">     58</td></tr>
 <tr><td>Zetberg         </td><td style="text-align: right;">     49</td></tr>
+<tr><td>staytrue1985    </td><td style="text-align: right;">     40</td></tr>
 <tr><td>mattigummi45    </td><td style="text-align: right;">     39</td></tr>
-<tr><td>staytrue1985    </td><td style="text-align: right;">     38</td></tr>
 <tr><td>Hemming87       </td><td style="text-align: right;">     35</td></tr>
+<tr><td>danc97-         </td><td style="text-align: right;">     34</td></tr>
 <tr><td>Darth_Krid      </td><td style="text-align: right;">     34</td></tr>
-<tr><td>danc97-         </td><td style="text-align: right;">     33</td></tr>
 <tr><td>daco_1979       </td><td style="text-align: right;">     26</td></tr>
 <tr><td>Jerry_Appleby   </td><td style="text-align: right;">     22</td></tr>
 <tr><td>Martz4040       </td><td style="text-align: right;">     22</td></tr>
@@ -1927,7 +1927,7 @@
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31446">31446</a></td><td>12.50   </td><td style="text-align: right;">       28</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       29</td></tr>
-<tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       30</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31477">31477</a></td><td>8.97    </td><td style="text-align: right;">       30</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31436">31436</a></td><td>18.31   </td><td style="text-align: right;">       31</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31437">31437</a></td><td>26.97   </td><td style="text-align: right;">       32</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       33</td></tr>
@@ -3065,8 +3065,8 @@
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       09</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       10</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       12</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       13</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14905">14905</a></td><td>28.09   </td><td style="text-align: right;">       12</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14906">14906</a></td><td>19.46   </td><td style="text-align: right;">       13</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14897">14897</a></td><td>28.58   </td><td style="text-align: right;">       14</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14884">14884</a></td><td>33.76   </td><td style="text-align: right;">       15</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       16</td></tr>
@@ -3079,7 +3079,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14893">14893</a></td><td>25.30   </td><td style="text-align: right;">       23</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14880">14880</a></td><td>39.34   </td><td style="text-align: right;">       24</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14899">14899</a></td><td>27.83   </td><td style="text-align: right;">       25</td></tr>
-<tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       26</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14904">14904</a></td><td>20.68   </td><td style="text-align: right;">       26</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
 <tr><td>MISSING                                                                                   </td><td>MISSING </td><td style="text-align: right;">       28</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14867">14867</a></td><td>85.24   </td><td style="text-align: right;">       29</td></tr>
