Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/04 09:25:14 AM UTC</h3>
-<h4>as of 2023/05/04 09:25:14 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/04 10:25:14 AM UTC</h3>
+<h4>as of 2023/05/04 10:25:14 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>590</td><td>850</td><td id="goalPercentage">40.97%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>593</td><td>847</td><td id="goalPercentage">41.18%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -164,7 +164,6 @@
 <tr><td>03:52</tr></td>
 <tr><td>03:53</tr></td>
 <tr><td>03:54</tr></td>
-<tr><td>03:55</tr></td>
 <tr><td>03:56</tr></td>
 <tr><td>03:57</tr></td>
 <tr><td>03:58</tr></td>
@@ -420,7 +419,6 @@
 <tr><td>09:05</tr></td>
 <tr><td>09:06</tr></td>
 <tr><td>09:08</tr></td>
-<tr><td>09:09</tr></td>
 <tr><td>09:10</tr></td>
 <tr><td>09:11</tr></td>
 <tr><td>09:12</tr></td>
@@ -440,7 +438,6 @@
 <tr><td>09:28</tr></td>
 <tr><td>09:29</tr></td>
 <tr><td>09:30</tr></td>
-<tr><td>09:31</tr></td>
 <tr><td>09:34</tr></td>
 <tr><td>09:35</tr></td>
 <tr><td>09:36</tr></td>
@@ -975,6 +972,7 @@
 <tr><td>03:31 </td><td>XxDecieverxX    </td><td><a href="https://www.playstationtrophies.org/profiles/XxDecieverxX/log?id=13044">13044</a>    </td><td style="text-align: right;">   44.87</td></tr>
 <tr><td>03:48 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32544">32544</a>   </td><td style="text-align: right;">   20.03</td></tr>
 <tr><td>03:49 </td><td>XxDecieverxX    </td><td><a href="https://www.playstationtrophies.org/profiles/XxDecieverxX/log?id=13045">13045</a>    </td><td style="text-align: right;">   44.56</td></tr>
+<tr><td>03:55 </td><td>slammajamma28   </td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15813">15813</a>   </td><td style="text-align: right;">   48.29</td></tr>
 <tr><td>04:01 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32545">32545</a>   </td><td style="text-align: right;">   16.72</td></tr>
 <tr><td>04:04 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32546">32546</a>   </td><td style="text-align: right;">   28.26</td></tr>
 <tr><td>04:10 </td><td>Lion_Squid      </td><td><a href="https://www.playstationtrophies.org/profiles/Lion_Squid/log?id=12838">12838</a>      </td><td style="text-align: right;">   88.96</td></tr>
@@ -1033,8 +1031,10 @@
 <tr><td>08:59 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14877">14877</a>    </td><td style="text-align: right;">   32.25</td></tr>
 <tr><td>09:04 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18900">18900</a>      </td><td style="text-align: right;">   57.1 </td></tr>
 <tr><td>09:07 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14878">14878</a>    </td><td style="text-align: right;">   40.32</td></tr>
+<tr><td>09:09 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31478">31478</a>         </td><td style="text-align: right;">   27.19</td></tr>
 <tr><td>09:14 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14863">14863</a>    </td><td style="text-align: right;">   41   </td></tr>
 <tr><td>09:24 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14879">14879</a>    </td><td style="text-align: right;">   42.2 </td></tr>
+<tr><td>09:31 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31479">31479</a>         </td><td style="text-align: right;">   93.68</td></tr>
 <tr><td>09:32 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18898">18898</a>      </td><td style="text-align: right;">   35.49</td></tr>
 <tr><td>09:33 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14880">14880</a>    </td><td style="text-align: right;">   39.34</td></tr>
 <tr><td>09:42 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14881">14881</a>    </td><td style="text-align: right;">   35.03</td></tr>
@@ -1487,8 +1487,8 @@
 <tr><td>Zetberg         </td><td style="text-align: right;">     49</td></tr>
 <tr><td>staytrue1985    </td><td style="text-align: right;">     40</td></tr>
 <tr><td>mattigummi45    </td><td style="text-align: right;">     39</td></tr>
+<tr><td>danc97-         </td><td style="text-align: right;">     36</td></tr>
 <tr><td>Hemming87       </td><td style="text-align: right;">     35</td></tr>
-<tr><td>danc97-         </td><td style="text-align: right;">     34</td></tr>
 <tr><td>Darth_Krid      </td><td style="text-align: right;">     34</td></tr>
 <tr><td>daco_1979       </td><td style="text-align: right;">     26</td></tr>
 <tr><td>Jerry_Appleby   </td><td style="text-align: right;">     22</td></tr>
@@ -1498,10 +1498,10 @@
 <tr><td>Dolken_swe      </td><td style="text-align: right;">     18</td></tr>
 <tr><td>Da-Eastside     </td><td style="text-align: right;">     17</td></tr>
 <tr><td>Barra333        </td><td style="text-align: right;">     14</td></tr>
+<tr><td>slammajamma28   </td><td style="text-align: right;">     10</td></tr>
 <tr><td>Blood_Velvet    </td><td style="text-align: right;">     10</td></tr>
 <tr><td>Lion_Squid      </td><td style="text-align: right;">     10</td></tr>
 <tr><td>diskdocx        </td><td style="text-align: right;">      9</td></tr>
-<tr><td>slammajamma28   </td><td style="text-align: right;">      9</td></tr>
 <tr><td>Road2unner      </td><td style="text-align: right;">      8</td></tr>
 <tr><td>XxDecieverxX    </td><td style="text-align: right;">      6</td></tr>
 <tr><td>Xemik           </td><td style="text-align: right;">      6</td></tr>
@@ -1898,7 +1898,7 @@
 </thead>
 <tbody>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31459">31459</a></td><td>91.97   </td><td style="text-align: right;">       00</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31466">31466</a></td><td>83.07   </td><td style="text-align: right;">       01</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31478">31478</a></td><td>27.19   </td><td style="text-align: right;">       01</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31454">31454</a></td><td>29.02   </td><td style="text-align: right;">       03</td></tr>
 <tr><td>MISSING                                                                              </td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
@@ -3031,7 +3031,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15804">15804</a></td><td>72.06   </td><td style="text-align: right;">       43</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       45</td></tr>
-<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15813">15813</a></td><td>48.29   </td><td style="text-align: right;">       46</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       47</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       48</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
