Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/04 07:19:09 PM UTC</h3>
-<h4>as of 2023/05/04 07:19:09 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/04 07:25:14 PM UTC</h3>
+<h4>as of 2023/05/04 07:25:14 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>646</td><td>794</td><td id="goalPercentage">44.86%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>647</td><td>793</td><td id="goalPercentage">44.93%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -37,7 +37,7 @@
 <td class='sum_cell' onClick="showHourSummary(event, 'hour_16')">Hour 16: 24</td>
 <td class='sum_cell' onClick="showHourSummary(event, 'hour_17')">Hour 17: 29</td></tr>
 <tr><td class='sum_cell' onClick="showHourSummary(event, 'hour_18')">Hour 18: 14</td>
-<td class='sum_cell' onClick="showHourSummary(event, 'hour_19')">Hour 19: 26</td>
+<td class='sum_cell' onClick="showHourSummary(event, 'hour_19')">Hour 19: 25</td>
 <td class='sum_cell' onClick="showHourSummary(event, 'hour_20')">Hour 20: 34</td>
 <td class='sum_cell' onClick="showHourSummary(event, 'hour_21')">Hour 21: 32</td>
 <td class='sum_cell' onClick="showHourSummary(event, 'hour_22')">Hour 22: 20</td>
@@ -865,7 +865,6 @@
 <tr><td>19:22</tr></td>
 <tr><td>19:24</tr></td>
 <tr><td>19:25</tr></td>
-<tr><td>19:26</tr></td>
 <tr><td>19:27</tr></td>
 <tr><td>19:28</tr></td>
 <tr><td>19:29</tr></td>
@@ -1541,6 +1540,7 @@
 <tr><td>19:20 </td><td>daco_1979       </td><td><a href="https://www.playstationtrophies.org/profiles/daco_1979/log?id=31267">31267</a>       </td><td style="text-align: right;">   98.86</td></tr>
 <tr><td>19:21 </td><td>stpatty         </td><td><a href="https://www.playstationtrophies.org/profiles/stpatty/log?id=12235">12235</a>         </td><td style="text-align: right;">   58.17</td></tr>
 <tr><td>19:23 </td><td>VazzVegas       </td><td><a href="https://www.playstationtrophies.org/profiles/VazzVegas/log?id=9858">9858</a>         </td><td style="text-align: right;">   62.93</td></tr>
+<tr><td>19:26 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13244">13244</a>       </td><td style="text-align: right;">   94.78</td></tr>
 <tr><td>19:30 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14885">14885</a>    </td><td style="text-align: right;">   33.25</td></tr>
 <tr><td>19:32 </td><td>clayser         </td><td><a href="https://www.playstationtrophies.org/profiles/clayser/log?id=9943">9943</a>           </td><td style="text-align: right;">   12.79</td></tr>
 <tr><td>19:34 </td><td>Meikoro         </td><td><a href="https://www.playstationtrophies.org/profiles/Meikoro/log?id=37257">37257</a>         </td><td style="text-align: right;">   86.16</td></tr>
@@ -1706,8 +1706,8 @@
 <tr><td>THE--ALCHEMlST  </td><td style="text-align: right;">     30</td></tr>
 <tr><td>R1p3r_5000      </td><td style="text-align: right;">     25</td></tr>
 <tr><td>daco_1979       </td><td style="text-align: right;">     24</td></tr>
+<tr><td>Martz4040       </td><td style="text-align: right;">     23</td></tr>
 <tr><td>Jerry_Appleby   </td><td style="text-align: right;">     22</td></tr>
-<tr><td>Martz4040       </td><td style="text-align: right;">     22</td></tr>
 <tr><td>Dolken_swe      </td><td style="text-align: right;">     21</td></tr>
 <tr><td>Da-Eastside     </td><td style="text-align: right;">     19</td></tr>
 <tr><td>Barra333        </td><td style="text-align: right;">     13</td></tr>
@@ -2819,19 +2819,19 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13239">13239</a></td><td>95.35   </td><td style="text-align: right;">       26</td></tr>
 <tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13222">13222</a></td><td>97.33   </td><td style="text-align: right;">       28</td></tr>
-<tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       29</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13243">13243</a></td><td>94.84   </td><td style="text-align: right;">       29</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13225">13225</a></td><td>97.27   </td><td style="text-align: right;">       30</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13204">13204</a></td><td>94.14   </td><td style="text-align: right;">       31</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13230">13230</a></td><td>97.25   </td><td style="text-align: right;">       32</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13240">13240</a></td><td>95.24   </td><td style="text-align: right;">       33</td></tr>
-<tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13244">13244</a></td><td>94.78   </td><td style="text-align: right;">       34</td></tr>
 <tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13224">13224</a></td><td>97.30   </td><td style="text-align: right;">       36</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13231">13231</a></td><td>97.25   </td><td style="text-align: right;">       37</td></tr>
 <tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
 <tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       39</td></tr>
 <tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       40</td></tr>
-<tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       41</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13242">13242</a></td><td>94.84   </td><td style="text-align: right;">       41</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13202">13202</a></td><td>95.40   </td><td style="text-align: right;">       42</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13226">13226</a></td><td>97.27   </td><td style="text-align: right;">       43</td></tr>
 <tr><td>MISSING                                                                                </td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
