--- a/tracker.html
+++ b/tracker.html
@@ -6,8 +6,8 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/04 11:15:49 PM UTC</h3>
-<h4>as of 2023/05/04 11:15:49 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/05 12:15:49 AM UTC</h3>
+<h4>as of 2023/05/05 12:15:49 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
 <tbody><tr class='percentageFill'><td>677</td><td>763</td><td id="goalPercentage">47.01%</td></tr></tbody></table></div><br>
@@ -1033,7 +1033,7 @@
 <tr><td>00:44 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17645">17645</a></td><td style="text-align: right;">   96.55</td></tr>
 <tr><td>00:45 </td><td>slammajamma28   </td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15803">15803</a>   </td><td style="text-align: right;">   81.74</td></tr>
 <tr><td>00:52 </td><td>slammajamma28   </td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15804">15804</a>   </td><td style="text-align: right;">   72.05</td></tr>
-<tr><td>00:55 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17646">17646</a></td><td style="text-align: right;">   95.88</td></tr>
+<tr><td>00:55 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17646">17646</a></td><td style="text-align: right;">   95.87</td></tr>
 <tr><td>00:56 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31452">31452</a>         </td><td style="text-align: right;">   34.06</td></tr>
 <tr><td>01:03 </td><td>Blood_Velvet    </td><td><a href="https://www.playstationtrophies.org/profiles/Blood_Velvet/log?id=23329">23329</a>    </td><td style="text-align: right;">  100   </td></tr>
 <tr><td>01:12 </td><td>slammajamma28   </td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15805">15805</a>   </td><td style="text-align: right;">   71.35</td></tr>
@@ -1311,7 +1311,7 @@
 <tr><td>14:36 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17576">17576</a></td><td style="text-align: right;">   97.64</td></tr>
 <tr><td>14:37 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18919">18919</a>      </td><td style="text-align: right;">   33.29</td></tr>
 <tr><td>14:38 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30239">30239</a>      </td><td style="text-align: right;">   74.33</td></tr>
-<tr><td>14:39 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17665">17665</a></td><td style="text-align: right;">   67.61</td></tr>
+<tr><td>14:39 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17665">17665</a></td><td style="text-align: right;">   67.62</td></tr>
 <tr><td>14:40 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45215">45215</a>     </td><td style="text-align: right;">   74.28</td></tr>
 <tr><td>14:42 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45220">45220</a>     </td><td style="text-align: right;">   66.26</td></tr>
 <tr><td>14:43 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45232">45232</a>     </td><td style="text-align: right;">   56.17</td></tr>
@@ -3818,13 +3818,13 @@
 <tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17635">17635</a></td><td>74.36   </td><td style="text-align: right;">       03</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17656">17656</a></td><td>66.67   </td><td style="text-align: right;">       04</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17664">17664</a></td><td>43.30   </td><td style="text-align: right;">       05</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17664">17664</a></td><td>43.23   </td><td style="text-align: right;">       05</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17600">17600</a></td><td>98.64   </td><td style="text-align: right;">       06</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17654">17654</a></td><td>69.23   </td><td style="text-align: right;">       07</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17636">17636</a></td><td>98.59   </td><td style="text-align: right;">       08</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17588">17588</a></td><td>98.64   </td><td style="text-align: right;">       09</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17660">17660</a></td><td>94.08   </td><td style="text-align: right;">       10</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17666">17666</a></td><td>41.05   </td><td style="text-align: right;">       11</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17660">17660</a></td><td>94.09   </td><td style="text-align: right;">       10</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17666">17666</a></td><td>41.02   </td><td style="text-align: right;">       11</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17582">17582</a></td><td>90.40   </td><td style="text-align: right;">       12</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17573">17573</a></td><td>97.64   </td><td style="text-align: right;">       13</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17566">17566</a></td><td>92.64   </td><td style="text-align: right;">       14</td></tr>
@@ -3835,7 +3835,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17561">17561</a></td><td>97.86   </td><td style="text-align: right;">       19</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17581">17581</a></td><td>97.64   </td><td style="text-align: right;">       20</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17658">17658</a></td><td>69.23   </td><td style="text-align: right;">       21</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17663">17663</a></td><td>60.48   </td><td style="text-align: right;">       22</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17663">17663</a></td><td>60.43   </td><td style="text-align: right;">       22</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17632">17632</a></td><td>71.79   </td><td style="text-align: right;">       23</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17625">17625</a></td><td>98.96   </td><td style="text-align: right;">       24</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17575">17575</a></td><td>97.64   </td><td style="text-align: right;">       25</td></tr>
@@ -3847,14 +3847,14 @@
 <tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17655">17655</a></td><td>69.23   </td><td style="text-align: right;">       32</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17631">17631</a></td><td>82.05   </td><td style="text-align: right;">       33</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17646">17646</a></td><td>95.88   </td><td style="text-align: right;">       34</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17646">17646</a></td><td>95.87   </td><td style="text-align: right;">       34</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17560">17560</a></td><td>99.29   </td><td style="text-align: right;">       35</td></tr>
 <tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17657">17657</a></td><td>66.67   </td><td style="text-align: right;">       37</td></tr>
 <tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17576">17576</a></td><td>97.64   </td><td style="text-align: right;">       39</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17623">17623</a></td><td>98.48   </td><td style="text-align: right;">       40</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17665">17665</a></td><td>67.61   </td><td style="text-align: right;">       41</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17665">17665</a></td><td>67.62   </td><td style="text-align: right;">       41</td></tr>
 <tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       42</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17641">17641</a></td><td>98.20   </td><td style="text-align: right;">       43</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17571">17571</a></td><td>97.64   </td><td style="text-align: right;">       44</td></tr>
