--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/05 08:15:49 AM UTC</h3>
-<h4>as of 2023/05/05 08:15:49 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/05 09:15:49 AM UTC</h3>
+<h4>as of 2023/05/05 09:15:49 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>720</td><td>720</td><td id="goalPercentage">50.0%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>721</td><td>719</td><td id="goalPercentage">50.07%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -20,7 +20,7 @@
 <div id="hourly_total_summary"><table><tbody>
 <tr><td class='sum_cell' onClick="showHourSummary(event, 'hour_0')">Hour 00: 31</td>
 <td class='sum_cell' onClick="showHourSummary(event, 'hour_1')">Hour 01: 39</td>
-<td class='sum_cell' onClick="showHourSummary(event, 'hour_2')">Hour 02: 13</td>
+<td class='sum_cell' onClick="showHourSummary(event, 'hour_2')">Hour 02: 12</td>
 <td class='sum_cell' onClick="showHourSummary(event, 'hour_3')">Hour 03: 54</td>
 <td class='sum_cell' onClick="showHourSummary(event, 'hour_4')">Hour 04: 47</td>
 <td class='sum_cell' onClick="showHourSummary(event, 'hour_5')">Hour 05: 42</td></tr>
@@ -135,7 +135,6 @@
 <tr><th>Time</th></tr>
 </thead>
 <tbody>
-<tr><td>02:30</tr></td>
 <tr><td>02:40</tr></td>
 <tr><td>02:41</tr></td>
 <tr><td>02:42</tr></td>
@@ -1045,6 +1044,7 @@
 <tr><td>02:27 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28204">28204</a>         </td><td style="text-align: right;">   99.21</td></tr>
 <tr><td>02:28 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28205">28205</a>         </td><td style="text-align: right;">   99.21</td></tr>
 <tr><td>02:29 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28206">28206</a>         </td><td style="text-align: right;">   99.21</td></tr>
+<tr><td>02:30 </td><td>Barra333        </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3658">3658</a>          </td><td style="text-align: right;">   94   </td></tr>
 <tr><td>02:31 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28207">28207</a>         </td><td style="text-align: right;">   99.15</td></tr>
 <tr><td>02:32 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17670">17670</a></td><td style="text-align: right;">   35.03</td></tr>
 <tr><td>02:33 </td><td>Zetberg         </td><td><a href="https://www.playstationtrophies.org/profiles/Zetberg/log?id=28209">28209</a>         </td><td style="text-align: right;">   99.09</td></tr>
@@ -1711,7 +1711,7 @@
 <tr><td>Dolken_swe      </td><td style="text-align: right;">     23</td></tr>
 <tr><td>daco_1979       </td><td style="text-align: right;">     22</td></tr>
 <tr><td>Da-Eastside     </td><td style="text-align: right;">     19</td></tr>
-<tr><td>Barra333        </td><td style="text-align: right;">     14</td></tr>
+<tr><td>Barra333        </td><td style="text-align: right;">     15</td></tr>
 <tr><td>Xemik           </td><td style="text-align: right;">     14</td></tr>
 <tr><td>stpatty         </td><td style="text-align: right;">     12</td></tr>
 <tr><td>diskdocx        </td><td style="text-align: right;">     11</td></tr>
@@ -1844,8 +1844,8 @@
 <tbody>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3642">3642</a></td><td>47.19   </td><td style="text-align: right;">       00</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       01</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3653">3653</a></td><td>93.33   </td><td style="text-align: right;">       02</td></tr>
-<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3653">3653</a></td><td>93.31   </td><td style="text-align: right;">       02</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3658">3658</a></td><td>94.00   </td><td style="text-align: right;">       03</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       05</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
@@ -1871,13 +1871,13 @@
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       26</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       28</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3651">3651</a></td><td>93.36   </td><td style="text-align: right;">       29</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3651">3651</a></td><td>93.33   </td><td style="text-align: right;">       29</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3647">3647</a></td><td>93.97   </td><td style="text-align: right;">       30</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3640">3640</a></td><td>45.89   </td><td style="text-align: right;">       32</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       33</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3648">3648</a></td><td>93.92   </td><td style="text-align: right;">       35</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3648">3648</a></td><td>93.89   </td><td style="text-align: right;">       35</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3632">3632</a></td><td>0.64    </td><td style="text-align: right;">       37</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
@@ -1897,7 +1897,7 @@
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3646">3646</a></td><td>95.26   </td><td style="text-align: right;">       52</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       54</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3652">3652</a></td><td>94.23   </td><td style="text-align: right;">       55</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3652">3652</a></td><td>94.20   </td><td style="text-align: right;">       55</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       57</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       58</td></tr>
