Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -6,11 +6,11 @@
 <script src='js/jquery.js'></script>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/05 08:29:07 PM UTC</h3>
-<h4>as of 2023/05/05 08:29:07 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/05 09:00:51 PM UTC</h3>
+<h4>as of 2023/05/05 09:00:51 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div id="goal-count"><table><thead><tr class='percentageFill'><th>Current</th><th>Remaining</th><th>Progress</th></tr></thead>
-<tbody><tr class='percentageFill'><td>828</td><td>612</td><td id="goalPercentage">57.5%</td></tr></tbody></table></div><br>
+<tbody><tr class='percentageFill'><td>829</td><td>611</td><td id="goalPercentage">57.57%</td></tr></tbody></table></div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
@@ -18,30 +18,30 @@
 <div id="remaining" class="tabcontent" style="display:block">
 <h2>REMAINING TIMES</h2>
 <div id="hourly_total_summary"><table><tbody>
-<tr><td class='sum_cell ' onClick="showHourSummary(event, 'hour_0')">Hour 00: 31</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_1')">Hour 01: 39</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_2')">Hour 02: 12</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_3')">Hour 03: 54</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_4')">Hour 04: 47</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_5')">Hour 05: 42</td></tr>
-<tr><td class='sum_cell ' onClick="showHourSummary(event, 'hour_6')">Hour 06: 38</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_7')">Hour 07: 52</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_8')">Hour 08: 32</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_9')">Hour 09: 30</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_10')">Hour 10: 17</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_11')">Hour 11: 32</td></tr>
-<tr><td class='sum_cell ' onClick="showHourSummary(event, 'hour_12')">Hour 12: 22</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_13')">Hour 13: 12</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_14')">Hour 14: 10</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_15')">Hour 15: 11</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_16')">Hour 16: 15</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_17')">Hour 17: 20</td></tr>
-<tr><td class='sum_cell ' onClick="showHourSummary(event, 'hour_18')">Hour 18: 6</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_19')">Hour 19: 16</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_20')">Hour 20: 15</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_21')">Hour 21: 22</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_22')">Hour 22: 16</td>
-<td class='sum_cell ' onClick="showHourSummary(event, 'hour_23')">Hour 23: 21</td>
+<tr><td id='cell_0' class='sum_cell ' onClick="showHourSummary(event, 'hour_0')">Hour 00: 31</td>
+<td id='cell_1' class='sum_cell ' onClick="showHourSummary(event, 'hour_1')">Hour 01: 39</td>
+<td id='cell_2' class='sum_cell ' onClick="showHourSummary(event, 'hour_2')">Hour 02: 12</td>
+<td id='cell_3' class='sum_cell ' onClick="showHourSummary(event, 'hour_3')">Hour 03: 54</td>
+<td id='cell_4' class='sum_cell ' onClick="showHourSummary(event, 'hour_4')">Hour 04: 47</td>
+<td id='cell_5' class='sum_cell ' onClick="showHourSummary(event, 'hour_5')">Hour 05: 42</td></tr>
+<tr><td id='cell_6' class='sum_cell ' onClick="showHourSummary(event, 'hour_6')">Hour 06: 38</td>
+<td id='cell_7' class='sum_cell ' onClick="showHourSummary(event, 'hour_7')">Hour 07: 52</td>
+<td id='cell_8' class='sum_cell ' onClick="showHourSummary(event, 'hour_8')">Hour 08: 32</td>
+<td id='cell_9' class='sum_cell ' onClick="showHourSummary(event, 'hour_9')">Hour 09: 30</td>
+<td id='cell_10' class='sum_cell ' onClick="showHourSummary(event, 'hour_10')">Hour 10: 17</td>
+<td id='cell_11' class='sum_cell ' onClick="showHourSummary(event, 'hour_11')">Hour 11: 32</td></tr>
+<tr><td id='cell_12' class='sum_cell ' onClick="showHourSummary(event, 'hour_12')">Hour 12: 22</td>
+<td id='cell_13' class='sum_cell ' onClick="showHourSummary(event, 'hour_13')">Hour 13: 12</td>
+<td id='cell_14' class='sum_cell ' onClick="showHourSummary(event, 'hour_14')">Hour 14: 10</td>
+<td id='cell_15' class='sum_cell ' onClick="showHourSummary(event, 'hour_15')">Hour 15: 11</td>
+<td id='cell_16' class='sum_cell ' onClick="showHourSummary(event, 'hour_16')">Hour 16: 15</td>
+<td id='cell_17' class='sum_cell ' onClick="showHourSummary(event, 'hour_17')">Hour 17: 20</td></tr>
+<tr><td id='cell_18' class='sum_cell ' onClick="showHourSummary(event, 'hour_18')">Hour 18: 6</td>
+<td id='cell_19' class='sum_cell ' onClick="showHourSummary(event, 'hour_19')">Hour 19: 16</td>
+<td id='cell_20' class='sum_cell ' onClick="showHourSummary(event, 'hour_20')">Hour 20: 14</td>
+<td id='cell_21'  class='sum_cell ' onClick="showHourSummary(event, 'hour_21')">Hour 21: 22</td>
+<td id='cell_22' class='sum_cell ' onClick="showHourSummary(event, 'hour_22')">Hour 22: 16</td>
+<td id='cell_23' class='sum_cell ' onClick="showHourSummary(event, 'hour_23')">Hour 23: 21</td>
 </tbody></table></div>
 <br><div id="hour_0" class="hour_summary">
 <table>
@@ -749,7 +749,6 @@
 <tbody>
 <tr><td>20:02</tr></td>
 <tr><td>20:04</tr></td>
-<tr><td>20:32</tr></td>
 <tr><td>20:37</tr></td>
 <tr><td>20:39</tr></td>
 <tr><td>20:41</tr></td>
@@ -1312,9 +1311,9 @@
 <tr><td>15:32 </td><td>danc97-         </td><td><a href="https://www.playstationtrophies.org/profiles/danc97-/log?id=31454">31454</a>         </td><td style="text-align: right;">   28.99</td></tr>
 <tr><td>15:33 </td><td>R1p3r_5000      </td><td><a href="https://www.playstationtrophies.org/profiles/R1p3r_5000/log?id=18904">18904</a>      </td><td style="text-align: right;">   54.5 </td></tr>
 <tr><td>15:34 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=138996">138996</a>     </td><td style="text-align: right;">  100   </td></tr>
-<tr><td>15:35 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=138999">138999</a>     </td><td style="text-align: right;">   99.66</td></tr>
+<tr><td>15:35 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=138999">138999</a>     </td><td style="text-align: right;">   99.67</td></tr>
 <tr><td>15:36 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23654">23654</a>  </td><td style="text-align: right;">   19.34</td></tr>
-<tr><td>15:37 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139011">139011</a>     </td><td style="text-align: right;">   99.66</td></tr>
+<tr><td>15:37 </td><td>Dino_Roar       </td><td><a href="https://www.playstationtrophies.org/profiles/Dino_Roar/log?id=139011">139011</a>     </td><td style="text-align: right;">   99.67</td></tr>
 <tr><td>15:38 </td><td>wrestlefanatic77</td><td><a href="https://www.playstationtrophies.org/profiles/wrestlefanatic77/log?id=17654">17654</a></td><td style="text-align: right;">   69.23</td></tr>
 <tr><td>15:39 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23635">23635</a>  </td><td style="text-align: right;">   28.49</td></tr>
 <tr><td>15:40 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45239">45239</a>     </td><td style="text-align: right;">   53.81</td></tr>
@@ -1549,6 +1548,7 @@
 <tr><td>20:29 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12774">12774</a>    </td><td style="text-align: right;">   87.08</td></tr>
 <tr><td>20:30 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18918">18918</a>      </td><td style="text-align: right;">   92.69</td></tr>
 <tr><td>20:31 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30316">30316</a>      </td><td style="text-align: right;">   23.88</td></tr>
+<tr><td>20:32 </td><td>Barra333        </td><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3663">3663</a>          </td><td style="text-align: right;">   66.89</td></tr>
 <tr><td>20:33 </td><td>mattigummi45    </td><td><a href="https://www.playstationtrophies.org/profiles/mattigummi45/log?id=12775">12775</a>    </td><td style="text-align: right;">   28.1 </td></tr>
 <tr><td>20:34 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30318">30318</a>      </td><td style="text-align: right;">   13.42</td></tr>
 <tr><td>20:35 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30320">30320</a>      </td><td style="text-align: right;">   15.97</td></tr>
@@ -1712,7 +1712,7 @@
 <tr><td>Da-Eastside     </td><td style="text-align: right;">     22</td></tr>
 <tr><td>Dolken_swe      </td><td style="text-align: right;">     21</td></tr>
 <tr><td>SWEDISH_PIRATE  </td><td style="text-align: right;">     21</td></tr>
-<tr><td>Barra333        </td><td style="text-align: right;">     18</td></tr>
+<tr><td>Barra333        </td><td style="text-align: right;">     19</td></tr>
 <tr><td>sum1_worsethan_u</td><td style="text-align: right;">     14</td></tr>
 <tr><td>Xemik           </td><td style="text-align: right;">     13</td></tr>
 <tr><td>XxDecieverxX    </td><td style="text-align: right;">     12</td></tr>
@@ -1735,7 +1735,7 @@
 <div class="dropdown"><button class="dropbtn">Select a PSN ID</button>
 <div class="dropdown-content">
 <button onclick="showUser(event, 'Asher1985')">Asher1985 - 3</button><br>
-<button onclick="showUser(event, 'Barra333')">Barra333 - 27</button><br>
+<button onclick="showUser(event, 'Barra333')">Barra333 - 28</button><br>
 <button onclick="showUser(event, 'Blood_Velvet')">Blood_Velvet - 34</button><br>
 <button onclick="showUser(event, 'clayser')">clayser - 6</button><br>
 <button onclick="showUser(event, 'Da-Eastside')">Da-Eastside - 22</button><br>
@@ -1848,7 +1848,7 @@
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       01</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3653">3653</a></td><td>93.31   </td><td style="text-align: right;">       02</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3661">3661</a></td><td>92.11   </td><td style="text-align: right;">       03</td></tr>
-<tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3663">3663</a></td><td>66.89   </td><td style="text-align: right;">       04</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3662">3662</a></td><td>71.63   </td><td style="text-align: right;">       05</td></tr>
 <tr><td>MISSING                                                                             </td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Barra333/log?id=3638">3638</a></td><td>47.62   </td><td style="text-align: right;">       07</td></tr>
